# Zephyrus

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/: engine_c_api.cpp  engine_c_api.h
engine/include/engine/api/: Components.h  Scene.h
engine/include/engine/core/: Engine.h  Node.h  Vec2.h
engine/include/engine/platform/: NativeWindow.h  Platform.h  WebCanvas.h
engine/include/engine/renderer/: Buffer.h  Renderer.h
engine/src/: Engine.cpp  Log.cpp  Node.cpp  Vec2.cpp  WebCanvas.cpp
native/: main.cpp
web/: index.html  package-lock.json  package.json
web/example/window/: index.html  window.ts
web/loader/: engine.ts  wasm_loader.ts
web/types/: engine.d.ts  global.d.ts
zephyrus/include/zephyrus/api/: Entity.h
zephyrus/include/zephyrus/core/: Engine.h  Log.h  Time.h
zephyrus/include/zephyrus/platform/: NativeWindow.h  Platform.h  WebCanvas.h
zephyrus/include/zephyrus/renderer/: Shader.h  Texture.h
zephyrus/src/: Engine.cpp  Log.cpp  NativeWindow.cpp  Node.cpp  Platform.cpp  Vec2.cpp  WebCanvas.cpp
